interface ISafeStack extends IStack {                                     // (5)
    boolean isEmpty();
    boolean isFull(); 
} 