interface IStack {                                                        // (1)
    void   push(Object item);
    Object pop(); 
} 